# licenSage

./: .env.example  .gitignore  README.md  pyproject.toml
backend/: config.py  main.py
backend/models/: license_analyzer.py
backend/routes/: dependency_file.py  github.py
backend/schemas/: schemas.py
backend/utils/: dependency_parser.py  logger_utils.py
frontend/: app.py
