[project]
name = "licenSage"
version = "0.1.0"
description = "GenAI-powered platform for software license compliance checks"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Web scraping and HTTP
    "bs4>=0.0.2",
    "requests>=2.32.3",
    "types-beautifulsoup4>=4.12.0.20250204",
    "types-requests>=2.32.0.20250328",
    # Backend
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "pydantic>=2.6.3",
    "pydantic-settings>=2.2.1",
    # Frontend
    "streamlit>=1.32.0",
    # AI/LLM
    "langchain>=0.1.11",
    "langchain-openai>=0.0.8",
    "openai>=1.12.0",
    "google-generativeai>=0.3.2",
    # Utilities
    "python-dotenv>=1.0.1",
    "tomli>=2.0.1",
    "python-multipart>=0.0.20",
    "colorlog>=6.9.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.2.0",
    "isort>=5.13.2",
    "mypy>=1.8.0",
    "pytest>=8.0.0",
]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
